--- a/media-query.css
+++ b/media-query.css
@@ -2,109 +2,6 @@
   .main-container-home {
     width: 100%;
   }
-}
-
-@media (max-width: 1017px) {
-  .nav-links {
-    display: none;
-  }
-  .nav-logo {
-    left: 30px;
-  }
-}
-
-@media (min-width: 1017px) {
-  .sidebar-burger-menu {
-    display: none;
-  }
-}
-
-@media (max-width: 500px) {
-  .sign-in-sidebar,
-  .register-sidebar {
-    display: block;
-  }
-  .sign-in-btn,
-  .register-btn {
-    display: none;
-  }
-  .over-view-heading {
-    left: 10px;
-  }
-}
-
-@media (max-width: 900px) {
-  .banner-qoute {
-    top: 160px;
-    width: 60%;
-    font-size: 20px;
-    top: 200px;
-  }
-  .banner-section h1 {
-    top: 92px;
-    font-size: 26px;
-    left: 55%;
-  }
-}
-@media (max-width: 450px) {
-  .banner-section {
-    height: 300px;
-  }
-  .banner-qoute {
-    width: 80%;
-    font-size: 16px;
-    top: 55%;
-  }
-  .banner-section h1 {
-    font-size: 20px;
-    width: 236px;
-  }
-}
-
-@media (max-width: 1500px) {
-  .main-container-home .search-place-form {
-    width: 70%;
-  }
-  .main-container-home .search-place-form .guests-input-search {
-    width: 150px;
-  }
-  .main-container-home .search-place-form input {
-    width: 90%;
-  }
-  .search-nav-btn2 {
-    right: 15%;
-  }
-}
-@media (max-width: 1200px) {
-  .search-nav-btn2 {
-    width: 120px;
-  }
-}
-@media (max-width: 1100px) {
-  .choose-country-section {
-    flex-wrap: wrap;
-    justify-content: space-between;
-  }
-  .flex-countries {
-    width: 100%;
-  }
-}
-@media (max-width: 1075px) {
-  .search-place-form input {
-    width: 80%;
-  }
-
-  .search-nav-btn2 {
-    width: 15%;
-  }
-  .search-nav-container {
-    width: 100%;
-  }
-  .search-place-form p {
-    font-size: 8px;
-  }
-}
-@media (max-width: 900px) {
   .main-container-home .search-place-nav {
     display: none;
   }
@@ -115,257 +12,6 @@
   .guests-input-search-rooms {
     width: 150px;
   }
-}
-@media (max-width: 450px) {
-  .search-place-nav-responsive {
-    width: 240px;
-    height: 280px;
-  }
-  .search-place-form-responsive input {
-    width: 180px;
-    height: 32px;
-  }
-
-  .search-nav-btn1 {
-    width: 120px;
-    height: 30px;
-  }
-  .search-place-form-responsive {
-    gap: -20px;
-  }
-}
-
-@media (max-width: 450px) {
-  .covid-restrictions-warning {
-    height: 100px;
-  }
-}
-
-@media (max-width: 685px) {
-  .section1-enjoy-vacation p {
-    width: 500px;
-    line-height: 150%;
-  }
-}
-@media (max-width: 350px) {
-  .section1-enjoy-vacation p {
-    width: 500px;
-    line-height: 150%;
-  }
-}
-
-
-
-@media (max-width: 450px) {
-  
-  .flex-countries{
-    flex-wrap: wrap;
-    width: 100%;
-  }
-  .choose-country-section-article-img {
-    width: 110%;
-    height: 200px;
-  }
-}
-
-@media (max-width: 550px) {
-  .section1-enjoy-vacation p {
-    width: 90%;
-  }
-}
-
-@media (max-width: 400px) {
-  .section1-enjoy-vacation p {
-    width: 80%;
-  }
-}
-
-@media (max-width: 685px) and (min-width: 550px) {
-  .inspiration-article1,
-  .inspiration-article2,
-  .inspiration-article3 {
-    width: 473px;
-    height: 340px;
-  }
-}
-@media (max-width: 450px) {
-  .inspiration-article1,
-  .inspiration-article2,
-  .inspiration-article3 {
-    width: 295px;
-    height: 260px;
-  }
-  .inspiration-article1 p,
-  .inspiration-article2 p,
-  .inspiration-article3 p {
-    top: 150px;
-    font-size: 16;
-  }
-  .inspiration-article1 h2,
-  .inspiration-article2 h2,
-  .inspiration-article3 h2 {
-    top: 60px;
-    font-size: 18px;
-  }
-}
-
-@media (max-width: 685px) and (min-width: 550px) {
-  .popular-section-article1 img,
-  .popular-section-article2 img,
-  .popular-section-article3 img,
-  .popular-section-article4 img {
-    width: 505px;
-    height: 400px;
-  }
-}
-@media (max-width: 350px) {
-  .popular-section-article1 img,
-  .popular-section-article2 img,
-  .popular-section-article3 img,
-  .popular-section-article4 img {
-    width: 280px;
-    height: 200px;
-  }
-}
-@media (max-width: 575px) {
-  .explore-dream-place h1 {
-    width: 110%;
-  }
-}
-
-@media (max-width: 900px) {
-  .down-banner h1 {
-    font-size: 24px;
-  }
-}
-@media (max-width: 750px) {
-  .down-banner h1 {
-    font-size: 22px;
-    width: 320px;
-  }
-}
-@media (max-width: 600px) {
-  .down-banner h1 {
-    left: 30px;
-    font-size: 22px;
-    width: 320px;
-  }
-  .down-banner button {
-    left: 30px;
-  }
-}
-@media (max-width: 400px) {
-  .down-banner h1 {
-    font-size: 16px;
-    width: 250px;
-  }
-}
-@media (max-width: 350px) {
-  .down-banner h1 {
-    font-size: 16px;
-    width: 200px;
-  }
-  .down-banner {
-    margin-bottom: 60%;
-  }
-}
-/*  */
-/*  */
-/*responsive for authentication pages*/
-/*  */
-/*  */
-@media (max-width: 450px) {
-  .under-sign-up-lines {
-    width: 80px;
-  }
-  .main-container-sign-up,
-  .main-container-sign-in,
-  .main-container-check-inbox,
-  .main-container-create-pw {
-    width: 90%;
-  }
-  .inbox-photo-container {
-    height: 95%;
-  }
-  .inbox-photo {
-    width: calc(100% - 50px);
-    height: calc(100% - 25px);
-  }
-}
-/*  */
-/*  */
-/*responsive for place details page*/
-/*  */
-/*  */
-@media (max-width: 1350px) {
-  .main-container-place-details {
-    width: calc(100% - 25px);
-  }
-  .overview-place {
-    width: calc(100vw - 85px);
-  }
-  .place-ditales-map {
-    flex-direction: column;
-  }
-  .map-section {
-    position: relative;
-    margin-top: 80px;
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-  }
-  .map-section h2 {
-    position: absolute;
-    top: -30%;
-  }
-  .main-container-place-details .search-place-form {
-    width: calc(100% - 290px);
-  }
-  .main-container-place-details .search-place-form input {
-    width: 200px;
-  }
-}
-
-@media (max-width: 1000px) {
-  .header-place-details-content {
-    width: 93%;
-    justify-content: space-between;
-  }
-  .blue-box-promo {
-    margin-bottom: 20px;
-  }
-  .room-card-place-ditales {
-    width: 49%;
-    margin-bottom: 25px;
-  }
-  .blue-box-promo {
-    width: 100%;
-  }
-  .blue-box-promo img {
-    width: 20%;
-    top: 50%;
-    transform: translate(0, -50%);
-    left: 70%;
-  }
-  .blue-box-promo p {
-    font-size: 30px;
-    width: 50%;
-  }
-
-  .header-place-details-content .nav-logo {
-    left: 45px;
-  }
-  .notifications-profile-photo {
-    right: 10px;
-  }
-  .main-container-place-details .search-place-form {
-    width: calc(100% - 240px);
-  }
-  .main-container-place-details .search-place-form input {
-    width: 150px;
-  }
-}
-@media (max-width: 900px) {
   .place-overviews-desc,
   .place-overviews-desc2,
   .place-overviews-desc3 {
@@ -420,9 +66,317 @@
     font-size: 17px;
     left: 9px;
   }
+  .down-banner h1 {
+    font-size: 24px;
+  }
+  .banner-qoute {
+    top: 160px;
+    width: 60%;
+    font-size: 20px;
+    top: 200px;
+  }
+  .banner-section h1 {
+    top: 92px;
+    font-size: 26px;
+    left: 55%;
+  }
 }
 
+@media (max-width: 1017px) {
+  .nav-links {
+    display: none;
+  }
+  .nav-logo {
+    left: 30px;
+  }
+  .sidebar-burger-menu {
+    display: block;
+  }
+}
+
+@media (max-width: 500px) {
+  .sign-in-sidebar,
+  .register-sidebar {
+    display: block;
+  }
+  .sign-in-btn,
+  .register-btn {
+    display: none;
+  }
+  .over-view-heading {
+    left: 10px;
+  }
+  .left-arrow-place,
+  .right-arrow-place {
+    display: block;
+  }
+  .small-photos {
+    display: none;
+  }
+  .big-photo-place {
+    height: 300px;
+  }
+  .overview-place {
+    width: 100%;
+  }
+  .place-overviews-desc {
+    left: 10px;
+  }
+  .place-overviews-desc2 {
+    left: 10px;
+  }
+  .place-overviews-desc3 {
+    left: 10px;
+  }
+  .facilites-blocks {
+    width: 55%;
+    font-size: 14px;
+    left: 7px;
+  }
+  .facilites-text {
+    margin-left: 5px;
+  }
+  .filter-button {
+    padding: 10px 10px;
+  }
+
+  .blue-box-promo-text {
+    font-size: 20px;
+    top: 100px;
+  }
+  .discount-blue-box-promo {
+    top: 60px;
+  }
+  .blue-box-promo img {
+    display: none;
+  }
+
+  .blue-box-promo .nav-logo {
+    top: 7%;
+    left: 28px;
+  }
+  .room-card-place-ditales {
+    height: 350px;
+    width: 55%;
+  }
+  .room-card-place-ditales img {
+    height: 130px;
+  }
+  .room-card-place-ditales h2 {
+    font-size: 13px;
+    top: 100px;
+    left: 10px;
+  }
+  .facilites-room-card {
+    top: 190px;
+    font-size: 12px;
+    width: 70px;
+    left: 10px;
+  }
+  .facilites-text {
+    width: 95px;
+  }
+  .room-card-place-ditales button {
+    height: 35px;
+    top: 300px;
+  }
+}
+
+@media (max-width: 450px) {
+  .banner-section {
+    height: 300px;
+  }
+  .banner-qoute {
+    width: 80%;
+    font-size: 16px;
+    top: 55%;
+  }
+  .banner-section h1 {
+    font-size: 20px;
+    width: 236px;
+  }
+  .search-place-nav-responsive {
+    width: 240px;
+    height: 280px;
+  }
+  .search-place-form-responsive input {
+    width: 180px;
+    height: 32px;
+  }
+
+  .search-nav-btn1 {
+    width: 120px;
+    height: 30px;
+  }
+  .search-place-form-responsive {
+    gap: -20px;
+  }
+  .covid-restrictions-warning {
+    height: 100px;
+  }
+  .flex-countries {
+    flex-wrap: wrap;
+    width: 100%;
+  }
+  .choose-country-section-article-img {
+    width: 110%;
+    height: 200px;
+  }
+  .inspiration-article1,
+  .inspiration-article2,
+  .inspiration-article3 {
+    width: 295px;
+    height: 260px;
+  }
+  .inspiration-article1 p,
+  .inspiration-article2 p,
+  .inspiration-article3 p {
+    top: 150px;
+    font-size: 16;
+  }
+  .inspiration-article1 h2,
+  .inspiration-article2 h2,
+  .inspiration-article3 h2 {
+    top: 60px;
+    font-size: 18px;
+  }
+  .under-sign-up-lines {
+    width: 80px;
+  }
+  .main-container-sign-up,
+  .main-container-sign-in,
+  .main-container-check-inbox,
+  .main-container-create-pw {
+    width: 90%;
+  }
+  .inbox-photo-container {
+    height: 95%;
+  }
+  .inbox-photo {
+    width: calc(100% - 50px);
+    height: calc(100% - 25px);
+  }
+}
+
+@media (max-width: 1500px) {
+  .main-container-home .search-place-form {
+    width: 70%;
+  }
+  .main-container-home .search-place-form .guests-input-search {
+    width: 150px;
+  }
+  .main-container-home .search-place-form input {
+    width: 90%;
+  }
+  .search-nav-btn2 {
+    right: 15%;
+  }
+}
+@media (max-width: 1200px) {
+  .search-nav-btn2 {
+    width: 120px;
+  }
+}
+@media (max-width: 1100px) {
+  .choose-country-section {
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  .flex-countries {
+    width: 100%;
+  }
+}
+@media (max-width: 1075px) {
+  .search-place-form input {
+    width: 80%;
+  }
+
+  .search-nav-btn2 {
+    width: 15%;
+  }
+  .search-nav-container {
+    width: 100%;
+  }
+  .search-place-form p {
+    font-size: 8px;
+  }
+}
+@media (max-width: 685px) {
+  .section1-enjoy-vacation p {
+    width: 500px;
+    line-height: 150%;
+  }
+}
+@media (max-width: 350px) {
+  .section1-enjoy-vacation p {
+    width: 500px;
+    line-height: 150%;
+  }
+}
+
+
+
+@media (max-width: 400px) {
+  .section1-enjoy-vacation p {
+    width: 80%;
+  }
+  .down-banner h1 {
+    font-size: 16px;
+    width: 250px;
+  }
+  /* .room-card-place-ditales{
+    width: ;
+  } */
+}
+
+@media (max-width: 685px) and (min-width: 550px) {
+  .inspiration-article1,
+  .inspiration-article2,
+  .inspiration-article3 {
+    width: 473px;
+    height: 340px;
+  }
+}
+
+@media (max-width: 685px) and (min-width: 550px) {
+  .popular-section-article1 img,
+  .popular-section-article2 img,
+  .popular-section-article3 img,
+  .popular-section-article4 img {
+    width: 505px;
+    height: 400px;
+  }
+}
+@media (max-width: 350px) {
+  .popular-section-article1 img,
+  .popular-section-article2 img,
+  .popular-section-article3 img,
+  .popular-section-article4 img {
+    width: 280px;
+    height: 200px;
+  }
+}
+@media (max-width: 575px) {
+  .explore-dream-place h1 {
+    width: 110%;
+  }
+}
+
+@media (max-width: 750px) {
+  .down-banner h1 {
+    font-size: 22px;
+    width: 320px;
+  }
+}
 @media (max-width: 600px) {
+  .down-banner h1 {
+    left: 30px;
+    font-size: 22px;
+    width: 320px;
+  }
+  .down-banner button {
+    left: 30px;
+  }
   .small-photo-place {
     width: calc(50% - 2px);
   }
@@ -492,69 +446,94 @@
   }
 }
 
-@media (max-width: 500px) {
-  .left-arrow-place,
-  .right-arrow-place {
-    display: block;
+@media (max-width: 350px) {
+  .down-banner h1 {
+    font-size: 16px;
+    width: 200px;
   }
-  .small-photos {
-    display: none;
+  .down-banner {
+    margin-bottom: 60%;
   }
-  .big-photo-place {
-    height: 300px;
+}
+
+@media (max-width: 1350px) {
+  .main-container-place-details {
+    width: calc(100% - 25px);
   }
   .overview-place {
+    width: calc(100vw - 85px);
+  }
+  .place-ditales-map {
+    flex-direction: column;
+  }
+  .map-section {
+    position: relative;
+    margin-top: 80px;
+    display: flex;
     width: 100%;
+    justify-content: space-between;
   }
-  .place-overviews-desc {
-    left: 10px;
+  .map-section h2 {
+    position: absolute;
+    top: -30%;
   }
-  .place-overviews-desc2 {
-    left: 10px;
+  .main-container-place-details .search-place-form {
+    width: calc(100% - 290px);
   }
-  .place-overviews-desc3 {
-    left: 10px;
+  .main-container-place-details .search-place-form input {
+    width: 200px;
   }
-  .facilites-blocks {
-    width: 55%;
-    font-size: 14px;
-    left: 7px;
+  .main-container-search-results {
+    flex-direction: column;
   }
-  .facilites-text {
-    margin-left: 5px;
+  .filter-aside {
+    display: none;
   }
-  .filter-button {
-    padding: 10px 10px;
+  .filter-responsive {
+    display: block;
   }
-  .blue-box-promo img {
-    width: 35%;
-    left: 60%;
+}
+@media (max-width: 550px) {
+  .section1-enjoy-vacation p {
+    width: 90%;
   }
-  .blue-box-promo p {
-    font-size: 20px;
+}
+
+@media (max-width: 1000px) {
+  .header-place-details-content {
+    width: 93%;
+    justify-content: space-between;
+  }
+  .blue-box-promo {
+    margin-bottom: 20px;
   }
   .room-card-place-ditales {
-    height: 350px;
+    width: 49%;
+    margin-bottom: 25px;
   }
-  .room-card-place-ditales img {
-    height: 130px;
+  .blue-box-promo {
+    width: 100%;
   }
-  .room-card-place-ditales h2 {
-    font-size: 13px;
-    top: 100px;
-    left: 10px;
+  .blue-box-promo img {
+    width: 25%;
+    top: 50%;
+    transform: translate(0, -50%);
+    left: 70%;
   }
-  .facilites-room-card {
-    top: 190px;
-    font-size: 12px;
-    width: 70px;
-    left: 10px;
+  .blue-box-promo p {
+    font-size: 30px;
+    width: 76%;
   }
-  .facilites-text {
-    width: 95px;
+  .header-place-details-content .nav-logo {
+    left: 45px;
   }
-  .room-card-place-ditales button {
-    height: 35px;
-    top: 300px;
+  .notifications-profile-photo {
+    right: 10px;
+  }
+  .main-container-place-details .search-place-form {
+    width: calc(100% - 240px);
+  }
+  .main-container-place-details .search-place-form input {
+    width: 150px;
   }
 }
